--- a/pk_uat.plist
+++ b/pk_uat.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://app.zjapps.net/packages/pk_uat/pk_uat.ipa</string>
+					<string>http://qp.yz171.com/game/pkuat/app/pk_uat.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
