--- a/pkking.plist
+++ b/pkking.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://download.cnpk6.com/app/pkk.ipa</string>
+					<string>http://res.nb325.com/pk.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
