--- a/pkking2.plist
+++ b/pkking2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://downloadtmp.24sc.cn:19999/app/pk.ipa</string>
+					<string>http://downloadtmp2.24sc.cn:19999/app/pk.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
